[package]
name = "aisix-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "aisix — the single binary"

[[bin]]
name = "aisix"
path = "src/main.rs"

[dependencies]
aisix-core = { path = "../aisix-core" }
aisix-etcd = { path = "../aisix-etcd" }
aisix-gateway = { path = "../aisix-gateway" }
aisix-obs = { path = "../aisix-obs" }
aisix-proxy = { path = "../aisix-proxy" }
aisix-guardrails = { path = "../aisix-guardrails" }
aisix-admin = { path = "../aisix-admin" }
aisix-provider-openai = { path = "../aisix-provider-openai" }
aisix-provider-anthropic = { path = "../aisix-provider-anthropic" }
aisix-provider-vertex = { path = "../aisix-provider-vertex" }
aisix-provider-azure-openai = { path = "../aisix-provider-azure-openai" }
aisix-provider-bedrock = { path = "../aisix-provider-bedrock" }
aisix-ratelimit = { path = "../aisix-ratelimit" }
aisix-cache = { path = "../aisix-cache", features = ["redis"] }
tokio.workspace = true
axum.workspace = true
axum-server.workspace = true
rustls.workspace = true
clap.workspace = true
config.workspace = true
serde.workspace = true
serde_json.workspace = true
# `aisix export` emits the resources file with the same YAML library the
# file source parses with, so the output is guaranteed to re-parse.
yaml-rust2.workspace = true
anyhow.workspace = true
tracing.workspace = true
etcd-client.workspace = true
reqwest.workspace = true
rcgen.workspace = true
uuid.workspace = true
hostname.workspace = true
x509-parser = "0.16"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
